--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-bcrypt==3.1.3
-cffi==1.10.0
-Django==1.11.4
-django-extensions==1.9.1
-djangorestframework==3.6.4
-pycparser==2.18
-pytz==2017.2
-six==1.10.0
+Collecting httpie
+  Downloading httpie-0.9.9-py2.py3-none-any.whl (74kB)
+Collecting Pygments>=2.1.3 (from httpie)
+  Downloading Pygments-2.2.0-py2.py3-none-any.whl (841kB)
+Collecting requests>=2.11.0 (from httpie)
+  Downloading requests-2.18.4-py2.py3-none-any.whl (88kB)
+Collecting certifi>=2017.4.17 (from requests>=2.11.0->httpie)
+  Downloading certifi-2017.7.27.1-py2.py3-none-any.whl (349kB)
+Collecting chardet<3.1.0,>=3.0.2 (from requests>=2.11.0->httpie)
+  Downloading chardet-3.0.4-py2.py3-none-any.whl (133kB)
+Collecting idna<2.7,>=2.5 (from requests>=2.11.0->httpie)
+  Downloading idna-2.6-py2.py3-none-any.whl (56kB)
+Collecting urllib3<1.23,>=1.21.1 (from requests>=2.11.0->httpie)
+  Downloading urllib3-1.22-py2.py3-none-any.whl (132kB)
+Installing collected packages: Pygments, certifi, chardet, idna, urllib3, requests, httpie
+Successfully installed Pygments-2.2.0 certifi-2017.7.27.1 chardet-3.0.4 httpie-0.9.9 idna-2.6 requests-2.18.4 urllib3-1.22
